--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Description" content="Created by Muhammad Rasyidi">
+    <meta name="description" content="Created by Muhammad Rasyidi">
 
-    <title>Tugas 1</title>
+    <title>MWS Project</title>
 
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
