--- a/public/kalkulator/index.html
+++ b/public/kalkulator/index.html
@@ -2,6 +2,7 @@
 <html lang="id">
 <head>
 	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="Kalkulator">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,6 +14,7 @@
 	<div id="kalkulator"></div>
 
 	<div id="footer"><small>Muhammad Rasyidi</small></div>
+
 	<script src="kalkulator.js"></script>
 </body>
 </html>
