XHR ke fetch dan perubahan tampilan dan js

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <title>MWS Project</title>
 
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (max-width: 576px)" href="main576.css" />
 </head>
 <body>
     <div id="container"></div>
