--- a/public/peta/index.html
+++ b/public/peta/index.html
@@ -11,6 +11,7 @@
 
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
     <link rel="stylesheet" type="text/css" media="screen" href="peta.css" />
+    <link rel="stylesheet" type="text/css" media="screen and (max-width: 576px)" href="peta576.css" />
 </head>
 <body>
     <div id="konten"></div>
