Penambahan Service Worker

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,10 @@
     <link rel="stylesheet" type="text/css" media="screen and (max-width: 576px)" href="main576.css" />
 </head>
 <body>
+    <div id="offline" style="display: none">Anda sedang offline</div>
     <div id="container"></div>
 
-    <script src="main.js"></script>
+    <script src='register_sw.js'></script>
+    <script src='main.js'></script>
 </body>
 </html>
