--- a/public/kalkulator/index.html
+++ b/public/kalkulator/index.html
@@ -11,10 +11,12 @@
 	<link rel="stylesheet" type="text/css" href="kalkulator.css">
 </head>
 <body>
+    <div id="offline" style="display: none">Anda sedang offline</div>
 	<div id="kalkulator"></div>
 
 	<div id="footer"><small>Muhammad Rasyidi</small></div>
 
+    <script src='../register_sw.js'></script>
 	<script src="kalkulator.js"></script>
 </body>
 </html>
