--- a/public/peta/index.html
+++ b/public/peta/index.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" type="text/css" media="screen and (max-width: 576px)" href="peta576.css" />
 </head>
 <body>
+    <div id="offline" style="display: none">Anda sedang offline</div>
     <div id="konten"></div>
     
+    <script src='../register_sw.js'></script>
 	<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
     <script src="config.js"></script>
     <script src="dbhelper.js"></script>
