--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 
     <title>MWS Project</title>
 
+    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link rel="stylesheet" type="text/css" media="screen and (max-width: 576px)" href="main576.css" />
 </head>
